packages/gitbook/src/components/DocumentView/OpenAPI/style.css
/* ... */
.openapi-markdown > *:last-child {
    @apply !mb-0;
}

/* Method Tags */
.openapi-method,
.openapi-statuscode {
    @apply m-0 h-5 min-w-9 justify-center rounded-md text-xs straight-corners:rounded-none circular-corners:rounded-lg uppercase font-mono items-center shrink-0 font-semibold px-1.5 py-0.5 mr-2 text-tint-12/8 leading-tight align-middle inline-flex whitespace-nowrap;
}

.openapi-method-small {}

.openapi-method-medium {
    @apply m-0 px-2.5 py-1 h-6 text-[0.813rem];
}

.toclink .openapi-method {
    @apply text-[0.625rem] mr-0 flex items-center justify-center;
}

.openapi-method-get,
.openapi-statuscode-success {
    @apply bg-green-100 text-green-800 dark:bg-green-900 dark:text-green-100;
}

.openapi-method-post,
.openapi-statuscode-redirection {
    @apply bg-amber-100 text-amber-800 dark:bg-amber-900 dark:text-amber-100;
}

.openapi-method-put,
.openapi-statuscode-informational {
    @apply bg-blue-100 text-blue-800 dark:bg-blue-900 dark:text-blue-100;
}

.openapi-method-patch {
    @apply bg-purple-100 text-purple-800 dark:bg-purple-900 dark:text-purple-100;
}

.openapi-method-delete,
.openapi-statuscode-error {
    @apply bg-red-100 text-red-800 dark:bg-red-900 dark:text-red-100;
}

.openapi-method-head,
.openapi-method-options,
.openapi-method-trace,
.openapi-method-hook {
    @apply bg-tint;
}

/* URL */
.openapi-url {
    @apply font-mono text-sm text-tint;
}

.openapi-url-var {
    @apply text-tint underline underline-offset-2 decoration-tint-subtle;
}

/* Column Layout */
.openapi-column-spec {
    @apply flex flex-col gap-8 flex-1;
}

.openapi-column-preview {
    @apply flex flex-col flex-1 sticky self-start max-h-[calc(100vh-var(--toc-top-offset))] scroll-mt-4 top-[calc(var(--toc-top-offset)+1.5rem)];
}

.openapi-column-preview-body {
    /* overflow-clip + clip-margin so panel box-shadows aren't cut while overflow is still clipped */
    @apply flex flex-col shrink overflow-clip [overflow-clip-margin:0.75rem] gap-4 print-mode:static;
}

.openapi-column-preview pre {
    @apply max-h-96 print-mode:max-h-none;
}

/* Schema Structure */
.openapi-schema-root {
    /* unstyled */
}

.openapi-schema-root-description.openapi-markdown {
    @apply prose-sm text-balance mt-1.5 text-[0.813rem]! text-tint overflow-hidden font-normal! select-text [&_strong]:font-semibold [&_strong]:text-inherit;
}

.openapi-section-schemas > .openapi-section-body > .openapi-schema-root-description {
    @apply px-2.5 pt-2.5 mt-0 !text-sm;
}

.openapi-schema-properties {
    @apply flex flex-col;
}

.openapi-schema,
.openapi-disclosure {
    @apply py-2.5 flex flex-col gap-2;
}

.openapi-schema-properties .openapi-schema:last-child {
    @apply border-b-0;
}

/* Schema Presentation */
.openapi-schema-presentation {
    @apply flex flex-col gap-1 font-normal scroll-mt-[calc(var(--toc-top-offset)+0.5rem)];
}

.openapi-schema-properties:last-child {
    @apply pb-0;
}

.openapi-schema-name {
    /* To make double click on the property name select only the name,
    we disable selection on the parent and re-enable it on the children. */
    @apply select-none text-sm text-balance *:whitespace-nowrap flex flex-wrap gap-y-1.5 gap-x-2.5 items-center;
}

.openapi-schema-name .openapi-deprecated {
    @apply text-xs;
}

.openapi-schema-propertyname {
    @apply select-all font-mono font-semibold text-tint-strong;
}

.openapi-schema-propertyname[data-deprecated="true"] {
    @apply line-through opacity-9;
}

.openapi-schema-discriminator {
    @apply text-primary-subtle/9 text-[0.813rem] lowercase;
}

.openapi-schema-required {
    @apply text-warning-subtle text-[0.813rem] lowercase;
}

.openapi-schema-optional {
    @apply text-tint-subtle text-[0.813rem] lowercase;
}

.openapi-schema-readonly {
    @apply text-primary-subtle/9 text-[0.813rem] lowercase;
}

.openapi-schema-writeonly {
    @apply text-success dark:text-success-subtle/9 text-[0.813rem] lowercase;
}

.openapi-schema-types {
    @apply flex items-baseline flex-wrap gap-1;
}

.openapi-schema-type {
    @apply text-tint select-text text-[0.813rem] font-mono [word-spacing:-0.25rem] whitespace-normal;
}

.openapi-schema-type:only-child {
    @apply ml-0;
}

/* Schema Header */
.openapi-schema-header {
    @apply flex flex-row items-center;
}

.openapi-schema-intro {
    @apply flex-1;
}

.openapi-schema-circular {
    @apply text-sm text-tint;
}

.openapi-schema-circular a {
    @apply underline;
}

.openapi-schema-circular-glyph {
    @apply text-base mr-1;
}

/* Schema Enum */
.openapi-schema-enum {
    @apply text-sm leading-relaxed max-w-full text-tint;
}

.openapi-schema-enum-value {
    @apply text-sm mr-1.5;
}

.openapi-schema-enum-value:first-child {
    @apply rounded-l-md straight-corners:rounded-none circular-corners:rounded-l-lg ml-0;
}

.openapi-schema-enum-value:last-child {
    @apply rounded-r-md straight-corners:rounded-none circular-corners:rounded-r-lg;
}

/* Schema Description */
.openapi-schema-description.openapi-markdown {
    @apply prose-sm text-tint overflow-hidden text-pretty font-normal! select-text [&_strong]:font-semibold [&_strong]:text-inherit;
}

.openapi-schema-description.openapi-markdown pre:has(code) {
    @apply overflow-x-auto flex-1 w-fit max-w-full h-fit whitespace-pre;
    scrollbar-width: none;
    -ms-overflow-style: none;
}

.openapi-schema-description.openapi-markdown pre::-webkit-scrollbar {
    display: none;
}

.openapi-schema-description.openapi-markdown pre code {
    font-weight: inherit !important;
    @apply text-xs !py-0;
}

/* Schema Examples */
.openapi-schema-example,
.openapi-schema-pattern,
.openapi-schema-default {
    @apply prose-sm text-tint;
}
/* ... */

